src/test/ui/custom-derive/issue-36935.stderr
error: custom derive attribute panicked
  --> $DIR/issue-36935.rs:17:15
   |
17 | #[derive(Foo, Bar)]
   |               ^^^
   |
   = help: message: lolnope

